# samosa

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  bazel-samosa  pyrightconfig.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
dex/drivers/camera/base/: BUILD.bazel  types.h
dex/infrastructure/shared_memory/: BUILD.bazel  README.md  format_benchmark_stats.py  futex.cc  futex.h  futex_test.cc  observer_ptr.h  run_benchmark_with_stats.sh  sequence-fast-consumer.mmd  sequence-slow-consumer.mmd  shared_memory.h  shared_memory_impl.h  shared_memory_monitor.h  shared_memory_monitor_impl.h  shared_memory_monitor_test.cc  shared_memory_private.cc  shared_memory_private.h  shared_memory_streaming.h  shared_memory_streaming_benchmark.cc  shared_memory_streaming_delay_test.cc  shared_memory_streaming_example.cc  shared_memory_streaming_impl.h  shared_memory_streaming_test.cc  shared_memory_streaming_test_private.h  shared_memory_test.cc  state-machine.mmd  streaming_control.cc  streaming_control.h
dex/infrastructure/video_monitor/: BUILD.bazel  color_convert.cc  color_convert.h  color_convert_test.cc  config.cc  config.h  config_test.cc  encoder.cc  encoder.h  encoder_muxer_integration_test.cc  encoder_test.cc  fmp4_muxer.cc  fmp4_muxer.h  fmp4_muxer_test.cc  fragment_ring.cc  fragment_ring.h  fragment_ring_test.cc  http_server.cc  http_server.h  main.cc  pipeline.cc  pipeline.h  pipeline_stats.h  time_base.h
dex/infrastructure/video_monitor/docs/: architecture.md  design.md  requirements.md
dex/vision/bindings/python/: BUILD.bazel  README.md  benchmark.py  bindings_test.py
dex/vision/bindings/python/dex/vision/shared_memory/: __init__.py  _bindings.cc  benchmark.py
dex/vision/examples/shared_memory_camera/: BUILD.bazel  README.md  bindings.cc  bindings_test.py  camera_consumer.cc  camera_consumer.py  camera_driver.cc  camera_reader.py  rerun_fanout_demo.py  rerun_monitor.py  video_producer.py  video_reader.py
dex/vision/examples/shared_memory_vision/: BUILD.bazel  README.md  camera_consumer.cc  camera_producer.cc  rerun_fanout_demo.py  video_producer.py
tools/: BUILD.bazel  check.sh  create_python_venv.py
tools/format/: BUILD.bazel  clang_format.sh  markdownlint.sh
tools/lint/: BUILD.bazel  __init__.py  basedpyright.sh  linters.bzl  multitool.lock.json  mypy_main.py  ruff_main.py
