load("@bazel_skylib//rules:common_settings.bzl", "bool_setting")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

exports_files([
    ".clang-tidy",
    ".ruff.toml",
    ".aspectignore",
    ".markdownlint.yaml",
    ".taplo.toml",
    ".yamlfmt.yaml",
])

alias(
    name = "clang-tidy",
    actual = "@llvm_toolchain_llvm//:clang-tidy",
    visibility = ["//visibility:public"],
)

alias(
    name = "shared_memory",
    actual = "//dex/infrastructure/shared_memory:shared_memory",
    visibility = ["//visibility:public"],
)

alias(
    name = "format",
    actual = "//tools/format",
)

alias(
    name = "check",
    actual = "//tools:check",
)

alias(
    name = "python_venv",
    actual = "//tools:create_python_venv",
    visibility = ["//visibility:public"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    exclude_external_sources = True,
    exclude_headers = "external",
    targets = [
        "//dex/...",
        "//tools/...",
    ],
)

alias(
    name = "format_cc",
    actual = "//tools/format:clang_format",
)

alias(
    name = "format_py",
    actual = "//tools/format:ruff",
)

alias(
    name = "format_starlark",
    actual = "//tools/format:buildifier",
)

alias(
    name = "format_toml",
    actual = "//tools/format:taplo_bin",
)

alias(
    name = "format_yaml",
    actual = "//tools/format:yamlfmt",
)

alias(
    name = "format_markdown",
    actual = "//tools/format:markdownlint",
)

config_setting(
    name = "asan_config",
    values = {"platform_suffix": "asan"},
)

config_setting(
    name = "asan_dynamic_config",
    values = {"platform_suffix": "asan-dynamic"},
)

config_setting(
    name = "tsan_config",
    values = {"platform_suffix": "tsan"},
)

config_setting(
    name = "tsan_dynamic_config",
    values = {"platform_suffix": "tsan-dynamic"},
)

config_setting(
    name = "ubsan_config",
    values = {"platform_suffix": "ubsan"},
)

config_setting(
    name = "gcov_config",
    values = {"platform_suffix": "gcov"},
)

config_setting(
    name = "prod_config",
    values = {"platform_suffix": "prod"},
)

config_setting(
    name = "ci_config",
    values = {"define": "ci=true"},
)
