module(
    name = "samosa",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "gsl", version = "4.0.0", repo_name = "com_github_microsoft_gsl")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "21.1.2",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "python_deps")

# aspect_rules_lint formatters
format_tools = use_extension("@aspect_rules_lint//format:extensions.bzl", "tools")
format_tools.taplo()
use_repo(format_tools, "taplo", "taplo_mac")

bazel_dep(name = "rules_nodejs", version = "6.3.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.11.1")

bazel_dep(name = "aspect_rules_js", version = "2.2.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_import(
    name = "markdownlint-cli2",
    integrity = "sha512-XH06ZOi8wCrtOSSj3p8y3yJzwgzYOSa7lglNyS3fP05JPRzRGyjauBb5UvlLUSCGysMmULS1moxdRHHudV+g/Q==",
    package = "markdownlint-cli2",
    version = "0.17.2",
)
use_repo(npm, "markdownlint-cli2")

bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.1", repo_name = "com_github_google_benchmark")
bazel_dep(name = "spdlog", version = "1.17.0", repo_name = "com_github_gabime_spdlog")
bazel_dep(name = "fmt", version = "12.1.0", repo_name = "com_github_fmtlib_fmt")

# Prebuilt binaries
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "yamlfmt_linux_arm64",
    build_file_content = """exports_files(["yamlfmt"])""",
    sha256 = "5b2689c963b177271330c5ce8ca7396751107e5a826be46f03d2cb9b6f0c7784",
    url = "https://github.com/google/yamlfmt/releases/download/v0.21.0/yamlfmt_0.21.0_Linux_arm64.tar.gz",
)

http_archive(
    name = "yamlfmt_darwin_arm64",
    build_file_content = """exports_files(["yamlfmt"])""",
    sha256 = "4b417ecb94339d57e4c122ecc948c1a00fe328b5853266de9806e652a92858fa",
    url = "https://github.com/google/yamlfmt/releases/download/v0.21.0/yamlfmt_0.21.0_Darwin_arm64.tar.gz",
)
