module(
    name = "samosa",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "gsl", version = "4.2.1", repo_name = "com_github_microsoft_gsl")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "21.1.2",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "python_deps")

format_tools = use_extension("@aspect_rules_lint//format:extensions.bzl", "tools")
format_tools.taplo()
use_repo(format_tools, "taplo")

bazel_dep(name = "rules_nodejs", version = "6.7.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.11.1")
use_repo(node, "nodejs_linux_amd64", "nodejs_linux_arm64")

bazel_dep(name = "aspect_rules_js", version = "3.0.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_import(
    name = "markdownlint-cli2",
    integrity = "sha512-XH06ZOi8wCrtOSSj3p8y3yJzwgzYOSa7lglNyS3fP05JPRzRGyjauBb5UvlLUSCGysMmULS1moxdRHHudV+g/Q==",
    package = "markdownlint-cli2",
    version = "0.17.2",
)
use_repo(npm, "markdownlint-cli2")

bazel_dep(name = "abseil-cpp", version = "20260107.1", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.5", repo_name = "com_github_google_benchmark")
bazel_dep(name = "spdlog", version = "1.17.0", repo_name = "com_github_gabime_spdlog")
bazel_dep(name = "nanobind_bazel", version = "2.12.0")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1")

# fmt
bazel_dep(name = "fmt", version = "12.1.0", repo_name = "com_github_fmtlib_fmt")

# Binaries for formatting
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "ruff_amd64",
    sha256 = "c253b106eb136f9cb4a319b5e3b4a9df78ec31fe15a3822efb69e7887ef9166e",
    url = "https://github.com/astral-sh/ruff/releases/download/0.15.6/ruff-x86_64-unknown-linux-gnu.tar.gz",
)

http_file(
    name = "ruff_arm64",
    sha256 = "b9183a35a2693941e1089a5a80fd45724df886c135beebb0f8f1e103704af25e",
    url = "https://github.com/astral-sh/ruff/releases/download/0.15.6/ruff-aarch64-unknown-linux-gnu.tar.gz",
)

http_file(
    name = "shfmt_amd64",
    sha256 = "1f57a384d59542f8fac5f503da1f3ea44242f46dff969569e80b524d64b71dbc",
    url = "https://github.com/mvdan/sh/releases/download/v3.10.0/shfmt_v3.10.0_linux_amd64",
)

http_file(
    name = "shfmt_arm64",
    sha256 = "9d23013d56640e228732fd2a04a9ede0ab46bc2d764bf22a4a35fb1b14d707a8",
    url = "https://github.com/mvdan/sh/releases/download/v3.10.0/shfmt_v3.10.0_linux_arm64",
)

http_file(
    name = "yamlfmt_amd64",
    sha256 = "0696f84c34ec6a104633dc5f5897e67a3e3e34caa362739d5e9c2d5c70ada109",
    url = "https://github.com/google/yamlfmt/releases/download/v0.15.0/yamlfmt_0.15.0_Linux_x86_64.tar.gz",
)

http_file(
    name = "yamlfmt_arm64",
    sha256 = "b8820250488579c5194e2ee8f9def65187188b43231c557d1c9644504a1b1ada",
    url = "https://github.com/google/yamlfmt/releases/download/v0.15.0/yamlfmt_0.15.0_Linux_arm64.tar.gz",
)
