load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "check",
    srcs = ["check.sh"],
    data = [
        "//tools/format",
        "//tools/lint:mypy",
    ],
)

py_binary(
    name = "create_python_venv",
    srcs = ["create_python_venv.py"],
    main = "create_python_venv.py",
    python_version = "PY3",
)
