load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

alias(
    name = "ruff",
    actual = "@aspect_rules_lint//format:ruff",
)

alias(
    name = "buildifier",
    actual = "@buildifier_prebuilt//:buildifier",
)

alias(
    name = "yamlfmt",
    actual = "@aspect_rules_lint//format:yamlfmt",
)

alias(
    name = "shfmt",
    actual = "@aspect_rules_lint//format:shfmt",
)

# Taplo selection
genrule(
    name = "taplo_bin",
    srcs = select({
        "@platforms//os:osx": ["@taplo_mac//file"],
        "//conditions:default": ["@taplo//file"],
    }),
    outs = ["taplo_executable"],
    cmd = "gunzip -c $< > $@",
    executable = True,
)

# Markdownlint selection
sh_binary(
    name = "markdownlint",
    srcs = ["markdownlint.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@markdownlint-cli2//:pkg",
    ],
)

sh_binary(
    name = "clang_format",
    srcs = ["clang_format.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@llvm_toolchain_llvm//:bin/clang-format",
    ],
)

format_multirun(
    name = "format",
    cc = ":clang_format",
    markdown = ":markdownlint",
    python = ":ruff",
    shell = ":shfmt",
    starlark = ":buildifier",
    toml = ":taplo_bin",
    yaml = ":yamlfmt",
)
