load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

alias(
    name = "clang-tidy",
    actual = "@llvm_toolchain_llvm//:clang-tidy",
)

py_binary(
    name = "mypy",
    srcs = [
        "__init__.py",
        "mypy_main.py",
    ],
    data = ["//dex/infrastructure/shared_memory:format_benchmark_stats"],
    main = "mypy_main.py",
    deps = [
        requirement("mypy"),
        requirement("mypy-extensions"),
        requirement("typing-extensions"),
    ],
)

py_binary(
    name = "ruff",
    srcs = [
        "__init__.py",
        "ruff_main.py",
    ],
    main = "ruff_main.py",
    deps = [
        requirement("ruff"),
    ],
)
