load("@nanobind_bazel//:build_defs.bzl", "nanobind_extension")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

nanobind_extension(
    name = "shared_memory_bindings",
    srcs = ["dex/vision/shared_memory/_bindings.cc"],
    deps = [
        "//dex/drivers/camera/base:types",
        "//dex/infrastructure/shared_memory:shared_memory_streaming",
    ],
)

py_library(
    name = "shared_memory",
    srcs = ["dex/vision/shared_memory/__init__.py"],
    data = [":shared_memory_bindings.so"],
    imports = ["."],
)

py_test(
    name = "shared_memory_bindings_test",
    srcs = ["dex/vision/shared_memory/bindings_test.py"],
    data = [":shared_memory_bindings.so"],
    main = "dex/vision/shared_memory/bindings_test.py",
    deps = [
        ":shared_memory",
        "@python_deps//numpy",
    ],
)

py_binary(
    name = "shared_memory_benchmark",
    srcs = ["dex/vision/shared_memory/benchmark.py"],
    data = [":shared_memory_bindings.so"],
    main = "dex/vision/shared_memory/benchmark.py",
    deps = [
        ":shared_memory",
        "@python_deps//psutil",
    ],
)
