load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_python//python:defs.bzl", "py_binary")

cc_binary(
    name = "camera_driver",
    srcs = ["camera_driver.cc"],
    deps = [
        "//dex/drivers/camera/base:types",
        "//dex/infrastructure/shared_memory:shared_memory_streaming",
        "@com_github_gabime_spdlog//:spdlog",
    ],
)

cc_binary(
    name = "camera_consumer",
    srcs = ["camera_consumer.cc"],
    deps = [
        "//dex/drivers/camera/base:types",
        "//dex/infrastructure/shared_memory:shared_memory_streaming",
        "@com_github_gabime_spdlog//:spdlog",
    ],
)

py_binary(
    name = "video_reader",
    srcs = ["video_reader.py"],
    deps = [
        "//dex/vision/bindings/python:shared_memory",
        "@python_deps//numpy",
        "@python_deps//opencv_python",
    ],
)

py_binary(
    name = "rerun_monitor",
    srcs = ["rerun_monitor.py"],
    deps = [
        "//dex/vision/bindings/python:shared_memory",
        "@python_deps//numpy",
        "@python_deps//rerun_sdk",
    ],
)
